--- a/Template-Cloud-Password.yml
+++ b/Template-Cloud-Password.yml
@@ -1,37 +1,29 @@
 ---
-- name: add cloud-set-guest-password script (RHEL)
+- name: clear init legacy
   when: ansible_os_family == "RedHat"
-  template: src=templates/RHEL/cloud-set-guest-password-rhel.j2 dest=/usr/share/cloudstack/cloudstack-set-guest-password mode=0755
+  shell: chkconfig --del cloudstack-set-guest-password
+  ignore_errors: true
 
-- name: add cloud-set-guest-password script (Debian)
-  when: ansible_distribution == "Debian"
-  template: src=templates/Debian/cloud-set-guest-password-debian.j2 dest=/usr/share/cloudstack/cloudstack-set-guest-password mode=0755
+- name: add cloud-set-guest-password script (dhclient)
+  when: ansible_os_family == "RedHat" or ansible_os_family == "Debian" or ansible_os_family == "Ubuntu" or ansible_os_family == "Mageia"
+  template: src=templates/dhclient/cloud-set-guest-password.j2 dest=/usr/share/cloudstack/cloudstack-set-guest-password mode=0755
 
-- name: add cloud-set-guest-password script (Ubuntu)
-  when: ansible_distribution == "Ubuntu"
-  template: src=templates/Ubuntu/cloud-set-guest-password-ubuntu.j2 dest=/usr/share/cloudstack/cloudstack-set-guest-password mode=0755
+- name: add cloud-set-guest-password script (wicked)
+  when: ansible_os_family == "Suse" or ansible_os_family == "openSUSE Leap"
+  template: src=templates/wicked/cloud-set-guest-password.j2 dest=/usr/share/cloudstack/cloudstack-set-guest-password mode=0755
 
 - name: add cloud-set-guest-password script (FreeBSD)
   when: ansible_os_family == "FreeBSD"
   template: src=templates/FreeBSD/cloud-set-guest-password-freebsd.j2 dest=/usr/share/cloudstack/cloudstack_set_guest_password mode=0755
 
-- name: setup cloudstack-set-guest-password (init)
-  when: upstart.stat.exists == false and systemd.stat.exists == false and ansible_os_family != "FreeBSD"
+- name: setup cloudstack-set-guest-password (sysvinit)
+  when: ansible_service_mgr == "sysvinit" or ansible_service_mgr == "init\n"
   file: state=link src=/usr/share/cloudstack/cloudstack-set-guest-password dest=/etc/init.d/cloudstack-set-guest-password mode=0755 force=yes
 
 - name: setup cloudstack-set-guest-password (upstart)
-  when: upstart.stat.exists == true and systemd.stat.exists == false and ansible_os_family != "FreeBSD"
+  when: ansible_service_mgr == "upstart"
   template: src=templates/upstart/set-guest-password.upstart.j2 dest=/etc/init/cloudstack-set-guest-password.conf mode=0644
 
 - name: setup cloudstack-set-guest-password (systemd)
-  when: upstart.stat.exists == false and systemd.stat.exists == true and ansible_os_family != "FreeBSD"
-  template: src=templates/systemd/set-guest-password.systemd.j2 dest=/usr/lib/systemd/system/cloudstack-set-guest-password.service mode=0644
-
-- name: setup cloudstack-set-guest-password (FreeBSD)
-  when: upstart.stat.exists == false and systemd.stat.exists == false and ansible_os_family == "FreeBSD"
-  template: src=templates/FreeBSD/cloud-password-rc.j2 dest=/usr/local/etc/rc.d/cloudstack_set_guest_password mode=0755
-
-- name: clear init legacy
-  when: ansible_os_family == "RedHat"
-  shell: chkconfig --del cloudstack-set-guest-password
-  ignore_errors: true
+  when: ansible_service_mgr == "systemd"
+  template: src=templates/systemd/set-guest-password.systemd.j2 dest=/etc/systemd/system/cloudstack-set-guest-password.service mode=0644
