--- a/Template-Cloud-Userdata.yml
+++ b/Template-Cloud-Userdata.yml
@@ -1,33 +1,30 @@
 ---
-- name: add cloud-run-userdata script (RHEL)
+- name: clear init legacy
   when: ansible_os_family == "RedHat"
-  template: src=templates/RHEL/cloud-run-userdata-rhel.j2 dest=/usr/share/cloudstack/cloudstack-run-userdata mode=0755
+  shell: chkconfig --del cloudstack-run-userdata
+  ignore_errors: true
+  
+- name: add cloud-run-userdata script (dhclient)
+  when: ansible_os_family == "RedHat" or ansible_os_family == "Debian" or ansible_os_family == "Ubuntu" or ansible_os_family == "Mageia"
+  template: src=templates/dhclient/cloud-run-userdata.j2 dest=/usr/share/cloudstack/cloudstack-run-userdata mode=0755
 
-- name: add cloud-run-userdata script (Debian)
-  when: ansible_os_family == "Debian"
-  template: src=templates/Debian/cloud-run-userdata-debian.j2 dest=/usr/share/cloudstack/cloudstack-run-userdata mode=0755
+- name: add cloud-run-userdata script (wicked)
+  when: ansible_os_family == "Suse" or ansible_os_family == "openSUSE Leap"
+  template: src=templates/wicked/cloud-run-userdata.j2 dest=/usr/share/cloudstack/cloudstack-run-userdata mode=0755
 
 - name: add cloud-run-userdata script (FreeBSD)
   when: ansible_os_family == "FreeBSD"
   template: src=templates/FreeBSD/cloud-run-userdata-freebsd.j2 dest=/usr/share/cloudstack/cloudstack_run_userdata mode=0755
 
-- name: setup cloudstack-run-userdata (init)
-  when: upstart.stat.exists == false and systemd.stat.exists == false and ansible_os_family != "FreeBSD"
+- name: setup cloudstack-run-userdata (sysvinit)
+  when: ansible_service_mgr == "sysvinit" or ansible_service_mgr == "init\n"
   file: state=link src=/usr/share/cloudstack/cloudstack-run-userdata dest=/etc/init.d/cloudstack-run-userdata mode=0755 force=yes
 
 - name: setup cloudstack-run-userdata (upstart)
-  when: upstart.stat.exists == true and systemd.stat.exists == false and ansible_os_family != "FreeBSD"
+  when: ansible_service_mgr == "upstart"
   template: src=templates/upstart/run-userdata.upstart.j2 dest=/etc/init/cloudstack-run-userdata.conf mode=0644
 
 - name: setup cloudstack-run-userdata (systemd)
-  when: upstart.stat.exists == false and systemd.stat.exists == true and ansible_os_family != "FreeBSD"
-  template: src=templates/systemd/run-userdata.systemd.j2 dest=/usr/lib/systemd/system/cloudstack-run-userdata.service mode=0644
+  when: ansible_service_mgr == "systemd"
+  template: src=templates/systemd/run-userdata.systemd.j2 dest=/etc/systemd/system/cloudstack-run-userdata.service mode=0644
 
-- name: setup cloudstack-run-userdata (FreeBSD)
-  when: upstart.stat.exists == false and systemd.stat.exists == false and ansible_os_family == "FreeBSD"
-  template: src=templates/FreeBSD/cloud-userdata-rc.j2 dest=/usr/local/etc/rc.d/cloudstack_run_userdata mode=0755
-
-- name: clear init legacy
-  when: ansible_os_family == "RedHat"
-  shell: chkconfig --del cloudstack-run-userdata
-  ignore_errors: true
