Continuing to work on getting SSH key generation working on Debian/Ubuntu.

--- a/Template-Cleanup.yml
+++ b/Template-Cleanup.yml
@@ -3,3 +3,7 @@
   include: Template-Clean-Logs.yml
 - name: remove shell history
   shell: rm -f /root/.*history*
+- name: remove junk from /home
+  shell: rm -Rf /home/*
+- name: remove junk in /root
+  shell: rm -Rf /root/*
